--- a/app/views/docs/offline.phtml
+++ b/app/views/docs/offline.phtml
@@ -10,7 +10,7 @@
     You should consider enabling Offline Support if you expect the user device running your application to experience short periods without a network connection, like going on an airplane or through a tunnel. Offline can't help you if the app's data needs to remain up to date with frequent updates or if write requests need to be processed immediately. If you expect your app to be offline for days or weeks at a time, you may also need to find alternative solutions.
 </p>
 
-<h3>Tradeoffs of Enabling Offline<h3>
+<h3>Tradeoffs of Enabling Offline Support<h3>
 <p>
     Offline support adds a cache layer that takes up additional resources and adds overhead to your requests. This may not be desirable for some applications, especially if it's not expected to be used without a stable internet connection.
 </p>
