--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -46,7 +46,13 @@ $cols = [
                     <li><a href="/docs/getting-started-for-apple">Appwrite for Apple</a></li>
                     <li><a href="/docs/getting-started-for-android">Appwrite for Android</a></li>
                     <li><a href="/docs/getting-started-for-server">Appwrite for Server</a></li>
-                    <li><a href="/docs/command-line">Appwrite CLI</a></li>
+                    <li>
+                        <li><a href="/docs/command-line">Appwrite CLI</a></li>
+                        <ul class="margin-top-small margin-bottom-small">
+                            <li>&nbsp;&nbsp;<a href="/docs/cli-deployment" data-selected="/docs/command-line"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Deployment Commands</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/cli-scripting" data-selected="/docs/command-line"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> API Commands</a></li>
+                        </ul>
+                    </li>
                     <li><a href="/docs/sdks">SDKs</a></li>
                 </ul>
 
