Split pages by mode

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -83,12 +83,12 @@ brew install --HEAD appwrite</code></pre>
 <h2><a href="/docs/command-line#next-steps" id="next-steps">Next Steps</a></h2>
 <p>You can use the Appwrite CLI to track and deploy functions and collection schemas. Deploy commands allow you to configure your Appwrite project programmatically and quickly setup replicate functions and collection schemas across different projects.</p>
 <p>
-<a href="/docs/cli-deployment"><i class="icon-angle-circled-right"></i>Learn more about CLI for Deployment</a>
+<a href="/docs/command-line-deployment"><i class="icon-angle-circled-right"></i>Learn more about CLI for Deployment</a>
 </p>
 
 <p>The Appwrite CLI can also be used to execute commands like a Server SDK. You can choose to use Appwrite in a headless and non-interactive mode, authenticating with API keys. This is useful for CI/CD or scripting use cases.</p>
 <p>
-<a href="/docs/cli-scripting"><i class="icon-angle-circled-right"></i>Learn more about CLI for Scripting</a>
+<a href="/docs/command-line-scripting"><i class="icon-angle-circled-right"></i>Learn more about CLI for Scripting</a>
 </p>
 
 
