Fix Relative Hyperlinks

--- a/app/views/docs/command-line-scripting.phtml
+++ b/app/views/docs/command-line-scripting.phtml
@@ -17,7 +17,7 @@ The Appwrite CLI supports commands for every Server API endpoint. This means you
 <p>In this mode, the CLI can only interact with one project at a time. If you look closely, you'll also notice that we use an <b>API Key</b> to authenticate which means the CLI behaves like Appwrite's server SDK. You can learn more about API Keys in the <a href="/docs/getting-started-for-server#apiKey">Appwrite for Server</a> docs.</p>
 
 
-<h2><a href="/docs/command-line#command-syntax" id="command-syntax">Command Syntax</a></h2>
+<h2><a href="/docs/command-line-scripting#command-syntax" id="command-syntax">Command Syntax</a></h2>
 
 <p>The Appwrite CLI follows the following general syntax:</p>
 
@@ -99,7 +99,7 @@ The Appwrite CLI supports commands for every Server API endpoint. This means you
 </table>
 
 
-<h2><a href="/docs/command-line#examples" id="examples">Examples</a></h2>
+<h2><a href="/docs/command-line-scripting#examples" id="examples">Examples</a></h2>
 <p><b>Create User</b></p>
 
 <p>To create a new user in your project, you can use the <code>create</code> command. To successfully create a user, make sure your API key is granted with the scope <code>"users.write"</code>.</p>
@@ -157,7 +157,7 @@ The Appwrite CLI supports commands for every Server API endpoint. This means you
     --permissions 'read("any")' 'write("team:abc")' </code></pre>
 </div>
 
-<h3><a href="/docs/command-line#configuration" id="configuration">Configuration</a></h3>
+<h3><a href="/docs/command-line-scripting#configuration" id="configuration">Configuration</a></h3>
 
 <p>At any point, if you would like to change your server endpoint, project key, or self-signed certificate acceptance, use the <code>client</code> command.</p>
 
