--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -49,8 +49,8 @@ $cols = [
                     <li>
                         <a href="/docs/command-line"><i class="icon-right-dir"></i> Appwrite CLI</a>
                         <ul class="margin-top-small margin-bottom-small">
-                            <li>&nbsp;&nbsp;<a href="/docs/command-line-deployment" data-selected="/docs/command-line-deployment"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Deployment Commands</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/command-line-scripting" data-selected="/docs/command-line-scripting"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> API Commands</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/command-line" data-selected="/docs/command-line-deployment"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> CLI for Deployment</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/command-line" data-selected="/docs/command-line-scripting"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> CLI for Scripting</a></li>
                         </ul>
                     </li>
                     <li><a href="/docs/sdks">SDKs</a></li>
