--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -79,16 +79,21 @@ brew install --HEAD appwrite</code></pre>
 </div>
 
 <h2><a href="/docs/command-line#next-steps" id="next-steps">Next Steps</a></h2>
-<p>You can use the Appwrite CLI to track and deploy functions and collection schemas. Deploy commands allow you to configure your Appwrite project programmatically and quickly setup replicate functions and collection schemas across different projects.</p>
+<p>You can use the Appwrite CLI to create and deploy functions and collection. Deploy commands allow you to configure your Appwrite project programmatically and replicate functions and collection schemas across Appwrite projects.</p>
 <p>
-<a href="/docs/command-line-deployment"><i class="icon-angle-circled-right"></i>Learn more about CLI for Deployment</a>
+<a href="/docs/command-line-deployment"><i class="icon-angle-circled-right"></i>Learn more about Deployment</a>
 </p>
 
-<p>The Appwrite CLI can also be used to execute commands like a Server SDK. You can choose to use Appwrite in a headless and non-interactive mode, authenticating with API keys. This is useful for CI/CD or scripting use cases.</p>
+<p>The Appwrite CLI can also be used to execute commands like a Server SDK.</p>
 <p>
-<a href="/docs/command-line-scripting"><i class="icon-angle-circled-right"></i>Learn more about CLI for Scripting</a>
+<a href="/docs/command-line-commands"><i class="icon-angle-circled-right"></i>Learn more about Commands</a>
 </p>
 
+<p>You can choose to use Appwrite in a headless and non-interactive mode, without the need for config files or sessions. This is useful for CI or scripting use cases.</p>
+
+<p>
+<a href="/docs/command-line-ci"><i class="icon-angle-circled-right"></i>Learn more about CI Mode</a>
+</p>
 
 <h2><a href="/docs/command-line#help" id="help">Help</a></h2>
 
