--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -79,16 +79,14 @@ brew install --HEAD appwrite</code></pre>
 </div>
 
 <h2><a href="/docs/command-line#next-steps" id="next-steps">Next Steps</a></h2>
+<p>Besides utility commands, Appwrite CLI can be used to execute commands like a Server SDK.</p>
+<p>
+<a href="/docs/command-line-commands"><i class="icon-angle-circled-right"></i>Find a full list of commands</a>
+</p>
 <p>You can use the Appwrite CLI to create and deploy functions and collection. Deploy commands allow you to configure your Appwrite project programmatically and replicate functions and collection schemas across Appwrite projects.</p>
 <p>
-<a href="/docs/command-line-deployment"><i class="icon-angle-circled-right"></i>Learn more about Deployment</a>
+<a href="/docs/command-line-deployment"><i class="icon-angle-circled-right"></i>Learn more about deployment</a>
 </p>
-
-<p>The Appwrite CLI can also be used to execute commands like a Server SDK.</p>
-<p>
-<a href="/docs/command-line-commands"><i class="icon-angle-circled-right"></i>Learn more about Commands</a>
-</p>
-
 <p>You can choose to use Appwrite in a headless and non-interactive mode, without the need for config files or sessions. This is useful for CI or scripting use cases.</p>
 
 <p>
